--- a/src/styles/element-ui.scss
+++ b/src/styles/element-ui.scss
@@ -31,7 +31,6 @@
 .fixed-width {
   .el-button--mini {
     padding: 7px 10px;
-    width: 60px;
   }
 }
 
@@ -69,7 +68,7 @@
 // dropdown
 .el-dropdown-menu {
   a {
-    display: block
+    display: block;
   }
 }
 
